mon second commit

--- a/hello.html
+++ b/hello.html
@@ -13,9 +13,12 @@
 	<body>
 
 		<!-- TITRE -->
-		<div>
+		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p>je m'appelle Samuel Herrera</p>
+		</div>
 	
 </body></html>
