--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,15 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!--description -->
 		<div>
+			<h1>Ma description</h1>
 			<p>je m'appelle Samuel Herrera</p>
+		</div>
+		
+		<div>
+			<h1>Mes récompenses</h1>
+			<p> en construction ...</p>
 		</div>
 	
 </body></html>
