ajout d’un gist

--- a/hello.html
+++ b/hello.html
@@ -10,22 +10,27 @@
 	</head>
 	
 
-	<body>
+				<body>
 
-		<!-- TITRE -->
-		<div id="top-banner">
-			Bienvenue dans cette formation GIT !
-		</div>
-		
-		<!--description -->
-		<div>
-			<h1>Ma description</h1>
-			<p>je m'appelle Samuel Herrera</p>
-		</div>
-		
-		<div>
-			<h1>Mes récompenses</h1>
-			<p> en construction ...</p>
-		</div>
-	
-</body></html>
+					<!-- TITRE -->
+					<div id="top-banner">
+						Bienvenue dans cette formation GIT !
+					</div>
+
+					<!--description -->
+					<div>
+						<h1>Ma description</h1>
+						<p>je m'appelle Samuel James</p>
+					</div>
+
+					<div>
+						<h1>Mes récompenses</h1>
+						<p> en construction ...</p>
+					</div>
+
+					<div> 
+						<p><script src="https://gist.github.com/thewolf10110/ab3d7f82a56fbfa3096cef547cc368ac.js"></script></p>
+					</div>
+					
+
+				</body></html>
